[gd_scene load_steps=43 format=3 uid="uid://dl86q0oq58j6q"]

[ext_resource type="Script" path="res://systems/card_combat/cards/card.gd" id="1_04ic4"]
[ext_resource type="Material" uid="uid://ug0loj8j0dgh" path="res://shaders/card_burn.tres" id="2_3325e"]
[ext_resource type="PackedScene" uid="uid://bvc773k7bxpdh" path="res://systems/card_combat/scripts/keyword_icon.tscn" id="2_bo1pm"]
[ext_resource type="Texture2D" uid="uid://2k427t62yypc" path="res://assets/sprites/cards/emperor.png" id="2_pcclt"]
[ext_resource type="Texture2D" uid="uid://ckv3yi4hchdli" path="res://assets/ui/icons/karma_icon_small.png" id="3_2fo6f"]
[ext_resource type="PackedScene" uid="uid://c21gcj8wgm736" path="res://systems/ui/tooltips/show_card_tooltip.tscn" id="3_cofgw"]
[ext_resource type="Texture2D" uid="uid://cn4qyopwfekb7" path="res://assets/sprites/cards/switch_frame.png" id="3_yfn4l"]
[ext_resource type="Theme" uid="uid://d12enup0x00h8" path="res://assets/ui/fonts/placeholder_theme.tres" id="4_3aln2"]
[ext_resource type="FontFile" uid="uid://cbi6wymdty6k2" path="res://assets/ui/fonts/TarotPamelaColmanSmith-Regular.ttf" id="4_5tth2"]
[ext_resource type="Texture2D" uid="uid://cxpu2wfsj2ng8" path="res://assets/ui/icons/switch_eye_1.png" id="5_f07ua"]
[ext_resource type="Texture2D" uid="uid://c0ow1gj3wun8a" path="res://assets/ui/icons/hp_icon_small.png" id="5_k0ofd"]
[ext_resource type="Texture2D" uid="uid://ck5apkflkodr0" path="res://assets/ui/icons/keyword_slots.png" id="6_4kaqf"]
[ext_resource type="Texture2D" uid="uid://cor7fkv822hhc" path="res://assets/ui/icons/switch_eye_2.png" id="6_atgve"]
[ext_resource type="Texture2D" uid="uid://d01gfffwrqcoh" path="res://assets/ui/icons/atk_icon_small.png" id="6_xx4u4"]
[ext_resource type="Texture2D" uid="uid://dlq7j4d0ebyye" path="res://assets/ui/icons/switch_eye_3.png" id="7_acmtm"]
[ext_resource type="PackedScene" uid="uid://fqgongu3mdf7" path="res://Audio/sfx_card.tscn" id="8_coke3"]
[ext_resource type="Texture2D" uid="uid://dh7u4g2msgy5l" path="res://assets/sprites/vfx/vfx_buff_effect.png" id="9_lhvyd"]
[ext_resource type="Texture2D" uid="uid://xls4xmra0mf" path="res://assets/sprites/cards/slow_chains_sprite.png" id="9_yyixa"]
[ext_resource type="PackedScene" uid="uid://bucg0txabpsyp" path="res://utils/sounds/singleton_interactor.tscn" id="11_mto8i"]
[ext_resource type="Texture2D" uid="uid://dk8yqb3in1e4g" path="res://assets/sprites/cards/card_back.png" id="14_yoojl"]

[sub_resource type="Animation" id="Animation_n7fbk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_f07ua")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_uujf5"]
resource_name = "eye_movement"
length = 6.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9, 1.7, 2.2, 2.9, 3.6, 4.3),
"transitions": PackedFloat32Array(1, 2.46229, 1, 1, 1.56917, 2.46229, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.845, 0), Vector2(0, 0), Vector2(-0.745, 0), Vector2(0, 0), Vector2(0.605, -1.445), Vector2(0.132, 2.206), Vector2(0.131522, -0.31413)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:texture")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5.1, 5.3),
"transitions": PackedFloat32Array(1, 1.51572, 1.51572),
"update": 1,
"values": [ExtResource("5_f07ua"), ExtResource("7_acmtm"), ExtResource("5_f07ua")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5.1, 5.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oltvv"]
_data = {
"RESET": SubResource("Animation_n7fbk"),
"eye_movement": SubResource("Animation_uujf5")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_yop51"]
atlas = ExtResource("6_4kaqf")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vo4j"]
atlas = ExtResource("6_4kaqf")
region = Rect2(0, 92, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ati"]
atlas = ExtResource("6_4kaqf")
region = Rect2(0, 184, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0j57"]
atlas = ExtResource("6_4kaqf")
region = Rect2(0, 276, 80, 80)

[sub_resource type="Curve" id="Curve_enjfs"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.105, 0.987572), 0.0, 0.0, 0, 0, Vector2(0.66, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_svhri"]
curve = SubResource("Curve_enjfs")

[sub_resource type="Gradient" id="Gradient_y4aia"]
colors = PackedColorArray(0.129558, 0.129558, 0.129558, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6cdoa"]
gradient = SubResource("Gradient_y4aia")

[sub_resource type="Curve" id="Curve_h0ckp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_tx4q8"]
curve = SubResource("Curve_h0ckp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8onbq"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -20, 0)
emission_shape = 3
emission_box_extents = Vector3(60, 5, 0)
direction = Vector3(0, -1, 0)
angular_velocity_min = -29.3
angular_velocity_max = 53.25
radial_velocity_max = 20.0
gravity = Vector3(0, -98, 0)
radial_accel_max = 10.0
tangential_accel_min = 5.0
tangential_accel_max = 5.0
damping_max = 50.0
attractor_interaction_enabled = false
color = Color(1, 0.478431, 0.0823529, 1)
color_initial_ramp = SubResource("GradientTexture1D_6cdoa")
alpha_curve = SubResource("CurveTexture_svhri")
emission_curve = SubResource("CurveTexture_tx4q8")

[sub_resource type="Animation" id="Animation_xmpfi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArtworkClip/ParticleAnchor/buff_particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Health:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("KeyWordSlots:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Cost:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fhgog"]
resource_name = "buff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ArtworkClip/ParticleAnchor/buff_particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_rabnj"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.309]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hnrs5"]
resource_name = "die"
length = 0.75
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SingletonInteractor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"execute"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Health:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Attack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("KeyWordSlots:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cost:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wrceq"]
_data = {
"RESET": SubResource("Animation_xmpfi"),
"buff": SubResource("Animation_fhgog"),
"die": SubResource("Animation_rabnj"),
"fade_out_icons": SubResource("Animation_hnrs5")
}

[sub_resource type="Animation" id="Animation_aytqs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Artwork:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%Artwork:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Cost:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Attack:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%KeyWordSlots:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Health:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l2vxh"]
resource_name = "card_flip"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.02, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%Artwork:visible")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.22962),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%Artwork:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.02, 1), Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Cost:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Attack:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%KeyWordSlots:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Health:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n6v6f"]
_data = {
"RESET": SubResource("Animation_aytqs"),
"card_flip": SubResource("Animation_l2vxh")
}

[node name="Card" type="Control"]
z_index = 2
custom_minimum_size = Vector2(170, 266)
layout_mode = 3
anchors_preset = 0
offset_right = 170.0
offset_bottom = 266.0
pivot_offset = Vector2(82, 128)
mouse_filter = 1
script = ExtResource("1_04ic4")
delete_material = ExtResource("2_3325e")

[node name="Artwork" type="TextureRect" parent="."]
unique_name_in_owner = true
texture_filter = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(82, 128)
size_flags_vertical = 3
texture = ExtResource("2_pcclt")
expand_mode = 1

[node name="SwitchFrame" type="TextureRect" parent="Artwork"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = -10.0
offset_top = -11.0
offset_right = 161.0
offset_bottom = 246.0
scale = Vector2(1.12, 1.12)
texture = ExtResource("3_yfn4l")
expand_mode = 1

[node name="Eyecon" type="TextureRect" parent="Artwork/SwitchFrame"]
layout_mode = 0
offset_left = 81.25
offset_top = 11.6071
offset_right = 95.25
offset_bottom = 25.6071
texture = ExtResource("5_f07ua")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="Artwork/SwitchFrame/Eyecon"]
layout_mode = 0
offset_right = 14.0
offset_bottom = 14.0
texture = ExtResource("6_atgve")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Artwork/SwitchFrame/Eyecon"]
libraries = {
"": SubResource("AnimationLibrary_oltvv")
}
autoplay = "eye_movement"

[node name="SwitchLabel" type="Label" parent="Artwork"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 248.0
offset_right = 802.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_fonts/font = ExtResource("4_5tth2")
theme_override_font_sizes/font_size = 128
text = "Yas Queen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DisabledOverlay" type="TextureRect" parent="Artwork"]
visible = false
layout_mode = 0
offset_right = 170.0
offset_bottom = 266.0
texture = ExtResource("9_yyixa")
expand_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Type" type="ColorRect" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 1
color = Color(0.32549, 0.631373, 0.768627, 1)

[node name="Label" type="Label" parent="VBoxContainer/Type"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "Type Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.53
offset_top = -45.0
offset_right = 53.53
offset_bottom = -14.0
grow_vertical = 0
texture = ExtResource("3_2fo6f")
expand_mode = 1

[node name="KarmaCost" type="Label" parent="Cost"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("4_3aln2")
theme_override_font_sizes/font_size = 18
text = "-100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 33.66
offset_top = -29.345
offset_right = 101.66
offset_bottom = 36.655
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_k0ofd")
expand_mode = 1

[node name="HealthCost" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("4_3aln2")
theme_override_font_sizes/font_size = 21
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Attack" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -0.6
offset_top = -34.55
offset_right = 67.4
offset_bottom = 47.45
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_xx4u4")
expand_mode = 1

[node name="AttackCost" type="Label" parent="Attack"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("4_3aln2")
theme_override_font_sizes/font_size = 22
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyWordSlots" type="Control" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -66.0
offset_bottom = 66.0
grow_horizontal = 0
pivot_offset = Vector2(33, 33)
mouse_filter = 1

[node name="KeywordSlot1" type="TextureRect" parent="KeyWordSlots"]
layout_mode = 0
offset_left = 47.0
offset_top = 34.0
offset_right = 127.0
offset_bottom = 114.0
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_yop51")

[node name="KeywordIcon" parent="KeyWordSlots/KeywordSlot1" instance=ExtResource("2_bo1pm")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(33, 33)
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="KeywordSlot2" type="TextureRect" parent="KeyWordSlots"]
layout_mode = 0
offset_left = 47.0
offset_top = 70.0
offset_right = 127.0
offset_bottom = 150.0
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_4vo4j")

[node name="KeywordIcon2" parent="KeyWordSlots/KeywordSlot2" instance=ExtResource("2_bo1pm")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.5758
offset_top = -62.0051
offset_right = -14.5758
offset_bottom = -12.0051
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(16, 16)

[node name="KeywordSlot3" type="TextureRect" parent="KeyWordSlots"]
layout_mode = 0
offset_left = 47.0
offset_top = 106.0
offset_right = 127.0
offset_bottom = 186.0
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_40ati")

[node name="KeywordIcon3" parent="KeyWordSlots/KeywordSlot3" instance=ExtResource("2_bo1pm")]
layout_mode = 1
offset_left = 15.4242
offset_top = 17.9949
offset_right = 65.4242
offset_bottom = 67.9949
pivot_offset = Vector2(16, 16)

[node name="KeywordSlot4" type="TextureRect" parent="KeyWordSlots"]
layout_mode = 0
offset_left = 47.0
offset_top = 142.0
offset_right = 127.0
offset_bottom = 222.0
scale = Vector2(0.4, 0.4)
texture = SubResource("AtlasTexture_f0j57")

[node name="KeywordIcon4" parent="KeyWordSlots/KeywordSlot4" instance=ExtResource("2_bo1pm")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.5758
offset_top = 17.9949
offset_right = -14.5758
offset_bottom = 67.9949
grow_horizontal = 0
pivot_offset = Vector2(16, 16)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="KeywordSlots" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="ArtworkClip" type="ColorRect" parent="."]
clip_children = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 20.0
offset_right = -8.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ParticleAnchor" type="Control" parent="ArtworkClip"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="buff_particles" type="GPUParticles2D" parent="ArtworkClip/ParticleAnchor"]
emitting = false
amount = 256
process_material = SubResource("ParticleProcessMaterial_8onbq")
texture = ExtResource("9_lhvyd")
lifetime = 2.0
speed_scale = 2.0
visibility_rect = Rect2(-153.868, -279.532, 315.949, 311.532)
local_coords = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wrceq")
}

[node name="CenterAnchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="SingletonInteractor" parent="." instance=ExtResource("11_mto8i")]
singleton = 1
method_to_call = "_SFX_Damage"

[node name="SFXCard" parent="." instance=ExtResource("8_coke3")]
unique_name_in_owner = true
mouse_filter = 1

[node name="Cardback" type="TextureRect" parent="."]
unique_name_in_owner = true
z_index = -1
layout_mode = 0
offset_right = 170.0
offset_bottom = 266.0
pivot_offset = Vector2(85, 0)
texture = ExtResource("14_yoojl")
expand_mode = 1
stretch_mode = 4

[node name="CardFlipAnimation" type="AnimationPlayer" parent="Cardback"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_n6v6f")
}

[node name="ShowCardTooltip" parent="." instance=ExtResource("3_cofgw")]
unique_name_in_owner = true
layout_mode = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="ShowCardTooltip" to="ShowCardTooltip" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ShowCardTooltip" to="ShowCardTooltip" method="_on_mouse_exited"]

[editable path="KeyWordSlots/KeywordSlot1/KeywordIcon"]
